@@ -117,7 +117,8 @@ public class ProcessUtils {
         return Optional.ofNullable(System.getProperty("hapi.spec.test.overrides"))
                 .map(testOverrides -> Arrays.stream(testOverrides.split(","))
                         .map(override -> override.split("="))
-                        .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1])))
+                        // Last-wins on duplicate keys so later overrides supersede earlier ones instead of throwing.
+                        .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1], (first, last) -> last)))
                 .orElse(Map.of());
     }
 
@@ -143,8 +144,8 @@ public class ProcessUtils {
         environment.put("hedera.config.version", Integer.toString(configVersion));
         environment.put("RUST_BACKTRACE", "full");
         environment.put("TSS_LIB_NUM_OF_CORES", Integer.toString(1));
-        // Set path to the (unzipped) https://builds.hedera.com/tss/hiero/wraps/v0.2/wraps-v0.2.0.tar.gz,
-        // e.g. "/Users/hincadenza/misc/wraps-v0.2.0", to get the WRAPS library ready to produce proofs
+        // Set path to the (unzipped) https://builds.hedera.com/tss/hiero/wraps/v1.0/wraps-v1.0.0.tar.gz,
+        // e.g. "/Users/hincadenza/misc/wraps-v1.0.0", to get the WRAPS library ready to produce proofs
         environment.put("TSS_LIB_WRAPS_ARTIFACTS_PATH", System.getProperty("hapi.spec.tssLibWrapsArtifactsPath", ""));
         environment.put("hedera.shard", String.valueOf(metadata.accountId().shardNum()));
         environment.put("hedera.realm", String.valueOf(metadata.accountId().realmNum()));
@@ -172,6 +173,26 @@ public class ProcessUtils {
     private static List<String> javaCommandLineFor(@NonNull final NodeMetadata metadata) {
         final List<String> commandLine = new ArrayList<>();
         commandLine.add(ProcessHandle.current().info().command().orElseThrow());
+        // Limit node JVM heap if configured, to avoid overcommitting runner memory.
+        // The pool is the total memory available for all nodes; divide by actual network size.
+        final var nodePoolMib = System.getProperty("hapi.spec.node.poolMib");
+        if (nodePoolMib != null && !nodePoolMib.isBlank()) {
+            try {
+                final int poolMib = Integer.parseInt(nodePoolMib);
+                final int networkSize = Integer.getInteger("hapi.spec.network.size", 4);
+                final int perNodeMib = Math.clamp(poolMib / networkSize, 2048, 4096);
+                commandLine.add("-Xmx" + perNodeMib + "m");
+            } catch (NumberFormatException e) {
+                log.warn("Invalid hapi.spec.node.poolMib value: {}", nodePoolMib);
+            }
+        }
+        // Write GC logs to the node's output dir so multi-second stalls can be diagnosed as long stop-the-world GC
+        // pauses (or ruled out)
+        final var gcLogPath = metadata.workingDirOrThrow()
+                .resolve(OUTPUT_DIR)
+                .resolve("gc.log")
+                .toAbsolutePath();
+        commandLine.add("-Xlog:gc*:file=" + gcLogPath + ":time,uptime,level,tags");
         // Only activate JDWP if not in CI
         if (System.getenv("CI") == null) {
             commandLine.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend="
